apps/media/jellyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
      annotations:
        instrumentation.opentelemetry.io/inject-dotnet: "observability/otel-instrumentation"
    spec:
      nodeSelector:
        kubernetes.io/hostname: n200
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:10.11.11ubu2604-ls43
          securityContext:
            privileged: true
          ports:
            - name: http
              containerPort: 8096
          volumeMounts:
            - name: config-pvc
              mountPath: "/config"
            - name: media
              mountPath: "/media"
            - name: quicksync
              mountPath: /dev/dri
      volumes:
        - name: config-pvc
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: config-cm
          configMap:
            name: jellyfin-cm
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: quicksync
          hostPath:
            path: /dev/dri
